force-app/main/default/objects/smagicinteract__Keyword_Action_Config__c/smagicinteract__Keyword_Action_Config__c.object-meta.xml
<CustomObject>
    <label>Keyword Action Config</label>
    <nameField>
        <label>Keyword Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Keyword Action Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>