force-app/main/default/objects/smagicinteract__Keyword_Action_Config__c/fields/smagicinteract__Field_To_Update__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Field_To_Update__c</fullName>
    <description>To be used in future. This field contains the API name of the field to update.</description>
    <label>Field To Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>