force-app/main/default/objects/smagicinteract__Keyword_Action_Config__c/fields/smagicinteract__Keyword__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Keyword__c</fullName>
    <description>To be used in future. This field contains the value of the keyword.</description>
    <label>Keyword</label>
    <length>50</length>
    <type>Text</type>
</CustomField>