force-app/main/default/objects/smagicinteract__Keyword_Action_Config__c/fields/smagicinteract__Related_To__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To be used in future. This field contains the ID of the related Message Object Config (MOC).</description>
    <label>Related To</label>
    <referenceTo>smagicinteract__Message_Object_Config__c</referenceTo>
    <relationshipLabel>Keyword Action Configs</relationshipLabel>
    <relationshipName>Keyword_Action_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>