force-app/main/default/objects/smagicinteract__Keyword_Action_Config__c/fields/smagicinteract__Value__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Value__c</fullName>
    <description>To be used in future. This field contains value to be used in Field To Update.</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>